tests/baselines/reference/exportEqualCallable(strict=true).errors.txt
exportEqualCallable_0.ts(4,10): error TS2454: Variable 'server' is used before being assigned.


==== exportEqualCallable_1.ts (0 errors) ====
    ///<reference path='exportEqualCallable_0.ts'/>
    import connect = require('exportEqualCallable_0');
    connect();
    
==== exportEqualCallable_0.ts (1 errors) ====
    var server: {
        (): any;
    };
    export = server;
             ~~~~~~
!!! error TS2454: Variable 'server' is used before being assigned.
    